# UniAutoAttend

./: .gitignore
.github/workflows/: code-quality.yml
backend/: .env_example  docker-compose.yml  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 16c119fd9053_create_user_uni_account.py  1741746f9dd0_create_user_model.py  2099e1eaecf1_init_tables.py  a091360c66f8_created_group_model.py  db26f6e46551_created_group_model.py
backend/src/core/: dao.py  database.py  exceptions.py  logger.py  middleware.py  schemas.py  service.py  settings.py
backend/src/core/base/: __init__.py  dependency.py  service.py
backend/src/core/mixins/: __init__.py  id.py  timestamp.py
backend/src/user/: enum.py  exceptions.py  model.py  router.py  schemas.py  service.py
backend/src/user/models/: __init__.py  group.py  university_account.py  user.py
backend/src/user/routers/: __init__.py  group.py  user.py
backend/src/user/schemas/: __init__.py  group.py  (+1 more)
bot/: .env_example  .pre-commit-config.yaml  docker-compose.yml  main.py  pyproject.toml
bot/src/core/: api_service.py  dto.py  enum.py  keyboards.py  locales.py  models.py  schemas.py  settings.py  user_service.py
bot/src/exceptions/: __init__.py  models.py  user.py
bot/src/handlers/: __init__.py  cancel.py  data_collection.py  start.py
bot/src/services/: __init__.py  api.py  tg_validatior.py  user.py  user_validator.py  validator.py
bot/src/services/api/: __init__.py  base.py  group.py  user.py
bot/src/services/validators/: __init__.py  user_data.py
parser/: main.py  pyproject.toml
(+3 files in other folders)
