[project]
name = "UniBot"
version = "1.0.0"
description = "TelegramBot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.10.1",
    "aiohttp>=3.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]
